Add tiny description to html

--- a/app/source/views/index.html
+++ b/app/source/views/index.html
@@ -7,6 +7,12 @@
     <title>Blade's Friend - Spotify Playlist</title>
 </head>
 <body>
-
+    <h1>Welcome to my collaborative playlist!</h1>
+    <p>Please recommend me your favorite music.</p>
+    <form action="">
+        <input type="text" placeholder="search your music">
+        <button>add</button>
+    </form>
+    <div id="playlist"></div>
 </body>
 </html>
