--- a/app/source/views/index.html
+++ b/app/source/views/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blade's Friend - Spotify Playlist</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <h1>Welcome to my collaborative playlist!</h1>
