--- a/app/source/styles/main.scss
+++ b/app/source/styles/main.scss
@@ -1,3 +1,23 @@
-body {
-  background-color: red;
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,700&display=swap');
+@import './variables';
+@import './buttons';
+@import './title';
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
+
+body {
+  background-color: $base;
+  color: $primary;
+  font: {
+    display: fallback;
+    family: $poppins, sans-serif;
+    size: 1em;
+  }
+}
+
+
+@import './intro';
