--- a/app/source/views/signin.html
+++ b/app/source/views/signin.html
@@ -7,9 +7,9 @@
     <title>Blade's Friend - Spotify Playlist</title>
 </head>
 <body>
-    <div class="intro">
-        <h1 class="intro__title title__title">Welcome to my <span class="intro__text-highlight">collaborative</span> playlist!</h1>
-        <h2 class="intro__subtitle title__subtitle">Could you share your <span class="intro__text-highlight">favorite</span> music?</h2>
+    <div class="wrapper intro">
+        <h1 class="intro__title title__title">Welcome to my <span class="intro__text-highlight text-highlight">collaborative</span> playlist!</h1>
+        <h2 class="intro__subtitle title__subtitle">Could you share your <span class="intro__text-highlight text-highlight">favorite</span> music?</h2>
         <a href="/api/login" class="intro__button button__link button__login button__primary">login</a>
     </div>
 </body>
